# kazenasser.com

./: .gitignore  README.md  api.py  api_engine.py  article.py  auth.py  backup.html  cv_parser.py  data.xlsx  default_game.py  engine.py  exporter.py  game.py  go.mod  go.sum  mailjet.py  main.py  middleware.go  next.config.mjs  package-lock.json  package.json  pyproject.toml  remark-plugins.mjs  requirements.txt  scene.py  scraper.py  server.go  source.json  tailwind.config.ts
.github/workflows/: go-ci.yml
app/: layout.tsx  page.tsx
components/: ArticleCard.tsx
components/ui/: button.tsx
data/cv/: data.json  data.xlsx
go-scraper/: Dockerfile  go.mod  go.sum  main.go
nodejs-scraper/: Dockerfile  index.js  package.json
python-scraper/: Dockerfile  README.md  exporter.py  mailjet.py  main.py  scraper.py
src/: auth.ts  fonts.ts  mdx-components.tsx  middleware.ts
src/app/: globals.css  layout.tsx
src/app/(home)/: articles.tsx  footer.tsx  header.tsx  intro.tsx  layout.tsx  page.tsx  work-experience.tsx
src/app/(secured)/: layout.tsx
src/app/contact/: page.mdx
src/components/: contact.tsx  cv-additional-information.tsx  cv-section.tsx  language-skills.tsx  mdx-layout.tsx  provider.tsx  providers.tsx  theme-switcher.tsx  timeline.tsx
src/icons/: broadcasts-icon.tsx  changelog-icon.tsx  cross-icon.tsx  events-icon.tsx  home-icon.tsx  inbox-icon.tsx  orders-icon.tsx  search-icon.tsx  settings-icon.tsx  support-icon.tsx
src/libs/: printing_functions.ts
src/pagedjs/: pagedjs.d.ts
styles/: cv.css  globals.css  pagedjs-interface.css  pagedjs-print.css
(+47 files in other folders)
